.helm/template/0-ingress.yaml
  GNU nano 5.4                                                                                 /var/k3s/dev/ingress.yaml                                                                                           
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: werfhello
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hlebauhus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
